--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
     "version": 2,
+    "name": "dizimo-api",
     "builds": [
         {
-            "src": "bin/www",
-            "use": "@now/node"
+            "src": "./app/bin/www",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "./app/app.js"
         }
     ]
 }
