--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "name": "dizimo-api",
     "builds": [
         {
-            "src": "./app/bin/www",
+            "src": "app/bin/www",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "./app/app.js"
+            "dest": "app/app.js"
         }
     ]
 }
