--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "app/app.js"
+            "dest": "app/bin/www"
         }
     ]
 }
