--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "name": "dizimo-api",
     "builds": [
         {
-            "src": "app/bin/www.js",
+            "src": "app/app.js",
             "use": "@vercel/node"
         }
     ],
